webapi/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: first-aspnetapi-deployment
spec:
  selector:
    matchLabels:
      app: first-aspnetapi-pod
  template:
    metadata:
      labels:
        app: first-aspnetapi-pod
    spec:
      containers:
      - name: first-aspnetapi-container
        image: aspnetapi:latest
        imagePullPolicy: Never
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 5000
  replicas: 2
