webapi/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: first-aspnetapi-service
spec:
  selector:
    app: first-aspnetapi-pod
  ports:
  - port: 8080
    targetPort: 5000
  type: LoadBalancer
